--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,6 @@ version: '3'
 
 services:
     backend:
-      build:  ./backend
+      build:  ./dashboard-backend
       ports:
         - "5000:5000"
