--- a/software/app/pyproject.toml
+++ b/software/app/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "pillow>=11.1.0",
+    "pocketbase>=0.14.0",
     "serial>=0.0.97",
 ]
 
